some section added

--- a/index.html
+++ b/index.html
@@ -5,9 +5,104 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donate people</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,700&family=Poppins:ital,wght@0,400;1,300&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section class="top-banner">
+       <div class="top-element">
+        <h1 class="top-title">Let's Help Those Who Are <br> More In Need</h1>
+        <p class="top-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, reiciendis! <br> Lorem ipsum dolor sit Lorem ipsu amet consectetur.</p>
+        <div class="btn">
+            <a class="donate-btn" href="">Donate Now</a>
+        </div>
+       </div>
+    </section>
+    <section class="donater-today">
+        <div class="donate-title">
+            <h2 class="title">Donate Today</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero iure harum qui corporis praesentium <br> tenetur assumenda Lorem ipsum ullam esse perferendis sint.</p>
+        </div>
+        <div class="card-menu">
+            <div class="card-amount">
+                <h3 class="amount">100Tk</h3>
+            </div>
+            <div id="card-highlight" class="card-amount">
+                <h3 id="amount-highlight" class="amount">200Tk</h3>
+            </div>
+            <div class="card-amount">
+                <h3 class="amount">500Tk</h3>
+            </div>
+            <div class="card-amount">
+                <h3 class="amount">1000Tk</h3>
+            </div>
+            <div class="card-amount">
+                <h3 class="amount">5000Tk</h3>
+            </div>
+        </div>
+        <div class="input-area">
+            <input class="input-amount" type="text" placeholder="Other Amount(Taka)">
+            <div class="btn">
+                <a class="donate-btn" href="">Donate Now</a>
+            </div>
+        </div>
+    </section>
+
+    <div class="donate-title">
+        <h2 class="title">Our Donate Plan</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero, sapiente. <br> Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+    </div>
+
+    <section class="donate-plan">
+        <div class="plan-card">
+            <div>
+                <img src="icons/food.png" alt="">
+            </div>
+            <h3>Food for a family</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing illo? Lorem ipsum dolor sit amet, consectetur adipisicing illo? Lorem ipsut amet consecte</p>
+        </div>
+        <div id="shelter-card" class="plan-card">
+            <div>
+                <img src="icons/shelter.png" alt="">
+            </div>
+            <h3>Shelter for a family</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing illo? Lorem ipsum dolor sit amet, consectetur adipisicing illo? Lorem ipsut amet consecte</p>
+        </div>
+        <div id="education-card" class="plan-card">
+            <div>
+                <img src="icons/education.png" alt="">
+            </div>
+            <h3>Education for a child</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing illo? Lorem ipsum dolor sit amet, consectetur adipisicing illo? Lorem ipsut amet consecte</p>
+        </div>
+    </section>
+
+
+
+    <section>
+
+    </section>
+
     
+    
+   <section class="get-updates">
+        <div class="donate-title">
+            <h2 class="title">Get's My Updates</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero iure harum qui corporis praesentium <br> tenetur assumenda Lorem ipsum ullam esse perferendis sint.</p>
+        </div>
+        <div class="email-box">
+            <div class="subcribe-email">
+                <input class="email-input" type="text" placeholder="Email">
+                <button class="subcribe-btn">Subcribe</button>
+            </div>
+        </div>
+   </section>
+   <section class="footer-area">
+    <h4 id="humble">Be Humble</h4>
+    <p class="top-info footer-text">I'm gonna do it</p>
+
+   </section>
 </body>
 </html>
