extra section added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section class="top-banner">
        <div class="top-element">
         <h1 class="top-title">Let's Help Those Who Are <br> More In Need</h1>
-        <p class="top-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, reiciendis! <br> Lorem ipsum dolor sit Lorem ipsu amet consectetur.</p>
+        <p class="top-info">The Donation Foundation has a visually appealing donation page that has a recurring donation suggestion <br> on the left or a one-time donation option on the right-hand side.</p>
         <div class="btn">
             <a class="donate-btn" href="">Donate Now</a>
         </div>
@@ -23,7 +23,7 @@
     <section class="donater-today">
         <div class="donate-title">
             <h2 class="title">Donate Today</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero iure harum qui corporis praesentium <br> tenetur assumenda Lorem ipsum ullam esse perferendis sint.</p>
+            <p>If you all stand by the helpless people then they will be able to live well.  Let's all stand <br> together with donations. Let's all live happily together</p>
         </div>
         <div class="card-menu">
             <div class="card-amount">
@@ -52,7 +52,7 @@
 
     <div class="donate-title">
         <h2 class="title">Our Donate Plan</h2>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero, sapiente. <br> Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+        <p>Our job is to bring a smile to the faces of helpless people. Our donation plan includes food for <br> the hungry people, shelter for the homeless people, and education for helpless children.</p>
     </div>
 
     <section class="donate-plan">
@@ -61,28 +61,54 @@
                 <img src="icons/food.png" alt="">
             </div>
             <h3>Food for a family</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing illo? Lorem ipsum dolor sit amet, consectetur adipisicing illo? Lorem ipsut amet consecte</p>
+            <p>Our organization arranges food for helpless families.  In families where there is a food crisis, we provide them with bread,pulses, rice, oil and fish.  We deliver the food to their homes.  This is what we want everyone to be happy.</p>
         </div>
         <div id="shelter-card" class="plan-card">
             <div>
                 <img src="icons/shelter.png" alt="">
             </div>
             <h3>Shelter for a family</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing illo? Lorem ipsum dolor sit amet, consectetur adipisicing illo? Lorem ipsut amet consecte</p>
+            <p>Our organization is to provide shelter for helpless families. We provide shelter to homeless children and homeless people.  We make them home.  This is what we want everyone to be happy.</p>
         </div>
         <div id="education-card" class="plan-card">
             <div>
                 <img src="icons/education.png" alt="">
             </div>
             <h3>Education for a child</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing illo? Lorem ipsum dolor sit amet, consectetur adipisicing illo? Lorem ipsut amet consecte</p>
+            <p>Our organization is to provide education to helpless children.  Children are the assets of the future. They have to make arrangements for education because a civilized nation will be formed in the midst of education.</p>
         </div>
     </section>
 
 
 
-    <section>
+    <section class="extra-menu">
+        <div class="extra-card">
+            <h3>Help Without Assisting</h3>
+            <img src="images/without-assustant.jpg" alt="">
+            <p>Convinced that lasting help cannot be provided only from the outside, and that it is the change of the human person by getting them out of their old habits that must be operated: Akamasoa wishes to help without assisting.</p>
+            <div id="more-information" class="btn">
+                <a class="donate-btn" href="">More information >></a>
+            </div>
 
+        </div>
+        <div class="extra-card">
+            <h3>Everyone Is Welcome</h3>
+            <img src="images/we are welcome.jpg" alt="">
+            <p>Located on the southeast coast of Madagascar, the Foyer de Tanjomoha was created in 1986 by Father Vincent Carme with the aim of welcoming young people with physical disabilities to treat their handicap and give them vocational training.</p>
+            <div id="more-information" class="btn">
+                <a class="donate-btn" href="">More information >></a>
+            </div>
+
+        </div>
+        <div class="extra-card">
+            <h3>Medical Support</h3>
+            <img src="images/medical support.jpg" alt="">
+            <p>All of the donations we receive go directly to our partners in best hospital, where the funds are used to dig wells, buy medicine and medical equipment, purchase seeds and agricultural tools, furnish classrooms with academic supplies, or build and outfit schools and hospitals.</p>
+            <div id="more-information" class="btn">
+                <a class="donate-btn" href="">More information >></a>
+            </div>
+
+        </div>
     </section>
 
     
