done the website

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
    <section class="get-updates">
         <div class="donate-title">
             <h2 class="title">Get's My Updates</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero iure harum qui corporis praesentium <br> tenetur assumenda Lorem ipsum ullam esse perferendis sint.</p>
+            <p>You can become a member of our organization to get all our updates.  If we all stand <br> by the side of helpless people, then no one will be helpless.</p>
         </div>
         <div class="email-box">
             <div class="subcribe-email">
