--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <div class="email-box">
             <div class="subcribe-email">
                 <input class="email-input" type="text" placeholder="Email">
-                <button class="subcribe-btn">Subcribe</button>
+                <button class="subcribe-btn subcribe">Subcribe</button>
             </div>
         </div>
    </section>
