--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <div class="extra-card">
             <h3>Medical Support</h3>
             <img src="images/medical support.jpg" alt="">
-            <p>All of the donations we receive go directly to our partners in best hospital, where the funds are used to dig wells, buy medicine and medical equipment, purchase seeds and agricultural tools, furnish classrooms with academic supplies, or build and outfit schools and hospitals.</p>
+            <p>All of the donations we receive go directly to our partners in best hospital, buy medicine and medical equipment, purchase seeds and agricultural tools, furnish classrooms with academic supplies, or build and outfit schools and hospitals.</p>
             <div id="more-information" class="btn">
                 <a class="donate-btn" href="">More information >></a>
             </div>
@@ -120,7 +120,7 @@
         </div>
         <div class="email-box">
             <div class="subcribe-email">
-                <input class="email-input" type="text" placeholder="Email">
+                <input class="email-input" type="email" placeholder="Email">
                 <button class="subcribe-btn subcribe">Subcribe</button>
             </div>
         </div>
