--- a/index.html
+++ b/index.html
@@ -80,11 +80,13 @@
     </section>
 
 
-
+    <div class="donate-title">
+        <h2 class="title">Today Donation News</h2>
+    </div>
     <section class="extra-menu">
         <div class="extra-card">
             <h3>Help Without Assisting</h3>
-            <img src="images/without-assustant.jpg" alt="">
+            <img src="images/without-assistant.jpg" alt="">
             <p>Convinced that lasting help cannot be provided only from the outside, and that it is the change of the human person by getting them out of their old habits that must be operated: Akamasoa wishes to help without assisting.</p>
             <div id="more-information" class="btn">
                 <a class="donate-btn" href="">More information >></a>
