--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
             <p>You can become a member of our organization to get all our updates.  If we all stand <br> by the side of helpless people, then no one will be helpless.</p>
         </div>
         <div class="email-box">
-            <div class="subcribe-email">
+            <div class="subscribe-email">
                 <input class="email-input" type="email" placeholder="Email">
-                <button class="subcribe-btn subcribe">Subcribe</button>
+                <button class="subscribe-btn subscribe">Subcribe</button>
             </div>
         </div>
    </section>
